Add a button to copy abilities from the rulebook
Players often copy abilities from the rulebook and dump it onto their Roll20
character sheet. Add a hidden table for each ability that has nice formatting
and a button to select and save the table to the clipboard. We need a separate
table because, if you copy the regular one, you get white text and borders,
which doesn't look right on the Roll20 character sheet. The hidden table has
black text, black borders, a better font, and a set width so that it looks
nice when pasted on Roll20.

Misc:
* Remove sub-coins from the character sheet, there's only GP.
* Check that character isn't undefined before we try creating one. This was
  showing up when changing turn order for some reason.
* Remove empty tags on abilities

--- a/html/templates/ability.html
+++ b/html/templates/ability.html
@@ -1,4 +1,4 @@
-<a id="class_{clazz}_ability_{name}"><table class="bordered">
+<a id="class_{clazz}_ability_{name}"><table class="visible-table bordered">
     <tr class="center bordered">
         <td class="center bordered"><i>{name}</i></td>
         <td class="center bordered">{action}</td>
@@ -13,3 +13,21 @@
         <td class="left bordered" colspan="5">Tags: {tags}</td>
     </tr>
 </table></a>
+
+<table id="table_class_{clazz}_ability_{name}" class="hidden-table">
+    <tr class="center black-bordered">
+        <td class="center black-bordered"><i>{name}</i></td>
+        <td class="center black-bordered">{action}</td>
+        <td class="center black-bordered">Cost: {cost}</td>
+        <td class="center black-bordered">Range: {range}</td>
+        <td class="center black-bordered">Duration: {duration}</td>
+    </tr>
+    <tr class="center black-bordered">
+        <td class="left black-bordered" colspan="5">{hidden_description}</td>
+    </tr>
+    <tr class="center black-bordered">
+        <td class="left black-bordered" colspan="5">Tags: {tags}</td>
+    </tr>
+</table>
+<button class="copy-button" onclick="copy_ability('table_class_{clazz}_ability_{name}')">Copy Ability</button>
+<br>
