--- a/html/templates/rulebook.html
+++ b/html/templates/rulebook.html
@@ -11,6 +11,10 @@
 </head>
 <body>
 
+<script type="text/javascript">
+{script}
+</script>
+
 <div class="img-container-l1">
 	<div class="img-container-l2 blended">
 		<img src="https://i.imgur.com/gpBumlT.png" alt="logo">
@@ -286,7 +290,7 @@
 				<h3>Misfire Effects</h3>
 			</a>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;When you use a firearm’s primary or secondary fire, you roll for the firearm’s misfire chance. Every firearm has a misfire chance between 0% and 100%, which describes the odds that your firearm will instead malfunction when you try and fire it. If you have a 50% misfire chance, you need to roll at least a 51 to avoid misfire. When you misfire, instead of doing the damage and effects of the chosen fire type, you roll a d100 and compare it to the following chart:</p>
-			<table class="padded bordered">
+			<table class="visible-table padded bordered">
 				<tr class="bordered">
 					<th class="center bordered">D100 Roll</th>
 					<th class="center bordered">Effect</th>
@@ -360,7 +364,7 @@
 				<h2>Skills</h2>
 			</a>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;There are 115 available skills in the game. When a player tries to do something that has a chance of failure and is dependent on that player’s competence, odds are they will be doing a skill check. Each skill scales from F to A, and then from 9 to 1, which means there are 15 skill ranks for any given skill. There is also an “untrained” rank below F, representing that your character knows of the skill and can put point into it, but has yet to do so. Untrained skills confer a skill check modifier of 0. A skill check consists of rolling a d100, then adding the bonus from your skill rank (which will be a multiple of 5), then adding the bonus from the attribute that skill is based off of (which is just the raw attribute modifier). The following is a table of skill bonuses at each skill rank:</p>
-			<table class="padded bordered">
+			<table class="visible-table padded bordered">
 				<tr class="bordered">
 					<th class="center bordered">Rank</th>
 					<th class="center bordered">Modifier</th>
@@ -472,7 +476,7 @@
 			<br>
 			<h4>Rolling For Success</h4>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;You will roll a single skill check, either Potion Crafting or Poison Crafting, depending on the type of concoction you are making. The difficulty check (DC) is the value you must beat, and is a function of the grades of your active ingredient, enhancer, modifiers, and impurity. The following chart details how each part affects the DC (assume DC starts at 0):</p>
-			<table class="padded bordered">
+			<table class="visible-table padded bordered">
 				<tr class="bordered">
 					<th class="center bordered">Ingredient Type</th>
 					<th class="center bordered">Grade</th>
@@ -529,7 +533,7 @@
 			<br>
 			<h4>Salvaging Materials</h4>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;With a cauldron and the appropriate skill, you can destroy a potion or poison and salvage the materials. You boil and distill the potion or poison, making a skill check, and depending on how well you do, you can recover the base, or both the base and the active ingredient. The DCs are based on the grade of the base.</p>
-			<table class="padded bordered">
+			<table class="visible-table padded bordered">
 				<tr class="bordered">
 					<th class="center bordered">Grade</th>
 					<th class="center bordered">DC to Recover Base</th>
@@ -584,7 +588,7 @@
 			<br>
 			<h4>Types of Ingredients</h4>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;The following section lists the categories of cooking ingredients and their aspected elements and attributes. This will help players anticipate the likely kinds of buffs their food will provide. For example, meat dishes might boost health regeneration, and something spicy might increase your lightning magic damage.</p>
-			<table class="padded bordered">
+			<table class="visible-table padded bordered">
 				<tr class="bordered">
 					<th class="center bordered">Food Type</th>
 					<th class="center bordered">Aspected Element</th>
@@ -635,7 +639,7 @@
 			<br>
 			<h4>Rolling For Success</h4>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;You will roll some number of Cooking skill checks equal to the number of servings you are attempting to make and average their results, then compare that to the DC table below, depending on difficulty, to determine the quality of your product.</p>
-			<table class="padded bordered">
+			<table class="visible-table padded bordered">
 				<tr class="bordered">
 					<th class="center bordered">Recipe Difficulty</th>
 					<th class="center bordered">Regular Meal DC</th>
@@ -693,7 +697,7 @@
 			<br>
 			<h4>Rolling For Success</h4>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;The following table contains DCs needed to successfully craft gear. You roll one skill check, depending on what you are trying to craft. You calculate the DC of your final product by adding up the DC contributions of the crafting materials used, then adding the base DC of 10 as well as another +10 for each design change you’ve made.</p>
-			<table class="padded bordered">
+			<table class="visible-table padded bordered">
 				<tr class="bordered">
 					<th class="center bordered">Grade of Crafting Material Used</th>
 					<th class="center bordered">DC Contribution to Total DC</th>
@@ -728,7 +732,7 @@
 			<br>
 			<h4>Salvaging Materials</h4>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;With the appropriate tools (a forge, a worktable, etc) and the appropriate skill, you can destroy a piece of equipment and salvage the materials. You dismantle the item, making a skill check and spending half as much time as if you were crafting the item, and depending on how well you do, you can recover up to 1 crafting material of your choice from a magic item and up to 2 crafting materials of your choice from a rare item. Unique items cannot be salvaged. Regardless of whether you succeed or fail, you lose the original item.</p>
-			<table class="padded bordered">
+			<table class="visible-table padded bordered">
 				<tr class="bordered">
 					<th class="center bordered">Rarity</th>
 					<th class="center bordered">DC to Recover 1 Material</th>
@@ -760,7 +764,7 @@
 			<br>
 			<h4>Rolling For Success</h4>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;When you begin the process of enchanting a piece of gear, you define the implicit and mod effects that you will be applying, and choose the gear you will be augmenting. While the process of enchanting is ongoing, that piece of gear cannot be worn. Even if you finish half of the process and leave the rest for later, that gear still cannot be used during the interim. First, select an implicit effect from the following list:</p>
-			<table class="padded bordered">
+			<table class="visible-table padded bordered">
 				<tr class="bordered">
 					<th class="center bordered">Enchantment Name</th>
 					<th class="center bordered">Effect</th>
@@ -1023,7 +1027,7 @@
 			</table>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;Notable enchantments with special restrictions include Cantripped and Sentient. The Cantripped enchantment allows you to add a cantrip to an item as a implicit effect. Cantrips are activatable abilities on items. If you select this enchantment, you may choose to either destroy another item with a cantrip as part of the action in order to use its cantrip, or you may infuse a Tier 1 class ability you have for the item’s cantrip. This does not affect the required DC. The Sentient enchantment allows you to infuse a sentient soul into an item, creating a sentient weapon/armor. This requires you to have a captured soul to use during the enchanting process. This does not affect the required DC. If you are successful, the item’s rarity changes to unique, and it becomes sentient. If you fail, you lose the captured soul.</p>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;After picking your implicit enchantment, you select 3 identical copies of any crafting material of the required grade (you may also use a material of a higher grade). If that material crafts for a mod on the item you are enchanting, you may also select to add that mod to the item, as a replacement of an existing mod of your choice or in an empty mod slot (an item can have at most 4 mods, so if it has less, it has empty mod slots that you can enchant). If you do choose to add the mod, you adjust your DC according to the following chart (note that since the minimum implicit enchantment grade is E, you can’t enchant with F grade materials):</p>
-			<table class="padded bordered">
+			<table class="visible-table padded bordered">
 				<tr class="bordered">
 					<th class="center bordered">Grade</th>
 					<th class="center bordered">DC Contribution</th>
@@ -1073,7 +1077,7 @@
 			<p>Higher tiers are generally more powerful than lower ones, and thus require higher investment of AP. Each tier’s abilities cost AP equal to the tier number. So, 2nd tier abilities cost 2 AP each, and 4th tier abilities cost 4 AP each.</p>
 			<br>
 			<p>You might recall ultimate abilities from the original game. I’ve decided that they will not be making a return, because they are too difficult to balance while still feeling sufficiently powerful.</p>
-			<table class="padded bordered">
+			<table class="visible-table padded bordered">
 				<tr class="bordered">
 					<th class="center bordered">Tier</th>
 					<th class="center bordered">Required Investment of AP in the Class to Unlock this Tier</th>
