--- a/barbs_character_sheet/Barbs.css
+++ b/barbs_character_sheet/Barbs.css
@@ -1083,6 +1083,15 @@ img.sheet-icon {
     vertical-align: middle;
 }
 
+.sheet-large-thin-button {
+    display: block;
+    font-size: 12px!important;
+    height: 20px;
+    padding: 0;
+    margin: 0;
+    vertical-align: middle;
+}
+
 
 /* Death save checkboxes - FAIL */
 
