--- a/html/templates/api.html
+++ b/html/templates/api.html
@@ -530,7 +530,7 @@
                     <br>
                     <ul>
                         <li>Chance to inflict Blinded - <span class="monospace">blinded chance: &lt;percentage chance&gt; &lt;applicable roll type&gt;</span></li>
-                        <li>Chance to inflict Burn 20 - <span class="monospace">burn chance: &lt;percentage chance&gt; &lt;applicable roll type&gt;</span> - If you need a value other than "20" for Burn, talk to Ian.</li>
+                        <li>Chance to inflict Burn X - <span class="monospace">burn &lt;X&gt; chance: &lt;percentage chance&gt; &lt;applicable roll type&gt;</span></li>
                         <li>Chance to inflict Confused - <span class="monospace">confused chance: &lt;percentage chance&gt; &lt;applicable roll type&gt;</span></li>
                         <li>Chance to inflict Crippled - <span class="monospace">crippled chance: &lt;percentage chance&gt; &lt;applicable roll type&gt;</span></li>
                         <li>Chance to inflict Fear - <span class="monospace">fear chance: &lt;percentage chance&gt; &lt;applicable roll type&gt;</span></li>
