--- a/html/templates/api.html
+++ b/html/templates/api.html
@@ -672,7 +672,7 @@
             <br>
             <h3>Take Damage</h3>
             <ul>
-                <li><span class="monospace">!barbs dmg $&lt;character_name&gt;$ &lt;physical damage and pen&gt; &lt;psychic damage and pen&gt; &lt;fire damage and pen&gt; &lt;water damage and pen&gt; &lt;earth damage and pen&gt; &lt;air damage and pen&gt; &lt;ice damage and pen&gt; &lt;lightning damage and pen&gt; &lt;light damage and pen&gt; &lt;dark damage and pen&gt;</span></li>
+                <li><span class="monospace">!barbs dmg $&lt;character_name&gt;$ physical:&lt;physical damage and pen&gt; psychic:&lt;psychic damage and pen&gt; fire:&lt;fire damage and pen&gt; water:&lt;water damage and pen&gt; earth:&lt;earth damage and pen&gt; air:&lt;air damage and pen&gt; ice:&lt;ice damage and pen&gt; lightning:&lt;lightning damage and pen&gt; light:&lt;light damage and pen&gt; dark:&lt;dark damage and pen&gt;</span></li>
             </ul>
             <p>&nbsp;&nbsp;&nbsp;&nbsp;Each "damage type and pen" field is the damage of that type being taken,
                 optionally followed by a bar | and then the amount of penetration of that type the attack has.
