Add GDR affix and attribute categories

--- a/html/templates/api.html
+++ b/html/templates/api.html
@@ -406,6 +406,12 @@
                     </ul>
                 </li>
 
+                <li>General Damage Resist (GDR) - <span class="monospace">gdr: &lt;bonus&gt;</span>
+                    <ul>
+                        <li>"bonus" must be an integer</li>
+                    </ul>
+                </li>
+
                 <li>On hit damage - <span class="monospace">damage: &lt;dice&gt; &lt;damage type&gt; &lt;applicable attack types&gt;</span>
                     <ul>
                         <li>"dice" can be any Roll20 dice expression, e.g. "4d10"</li>
