--- a/html/templates/attribute.html
+++ b/html/templates/attribute.html
@@ -1,1 +1,1 @@
-<a id="attribute_{name}"><p><b>{name_and_tla}</b> – {description}<p></a>
+<a id="attribute_{name}"><p><span style="color: {color};"><b>{name_and_tla}</b></span> – {description}<p></a>
