Proper minion damage support

--- a/html/templates/api.html
+++ b/html/templates/api.html
@@ -529,6 +529,7 @@
                         <li>Forced movement - <span class="monospace">forced movement: &lt;number of ft of movement&gt; &lt;applicable roll type&gt;</span></li>
                         <li>Lethality - <span class="monospace">lethality: &lt;percentage&gt; &lt;applicable roll type&gt;</span></li>
                         <li>Lifesteal - <span class="monospace">lifesteal: &lt;percentage&gt; &lt;applicable roll type&gt;</span></li>
+                        <li>Minion damage - <span class="monospace">minion damage: &lt;percentage&gt; &lt;applicable roll type&gt;</span></li>
                         <li>Minion lethality - <span class="monospace">minion lethality: &lt;percentage&gt; &lt;applicable roll type&gt;</span></li>
                         <li>Weapon reach - <span class="monospace">reach: &lt;number of ft of increased reach&gt; &lt;applicable roll type&gt;</span></li>
                         <li>Chance to be unblockable - <span class="monospace">unblockable chance: &lt;percentage chance&gt; &lt;applicable roll type&gt;</span></li>
