Make effects creatable out of inventory as well

--- a/barbs_character_sheet/Barbs.css
+++ b/barbs_character_sheet/Barbs.css
@@ -578,53 +578,12 @@ span.sheet-spelltypetab {
 
 /* Inventory Page Settings */
 
-div[class^="sheet-inventory-page"] {
-    display: none;
-}
 
-input.sheet-inventorytab1:checked ~ div.sheet-inventory-page1,
-input.sheet-inventorytab2:checked ~ div.sheet-inventory-page2,
-input.sheet-inventorytab3:checked ~ div.sheet-inventory-page3,
-input.sheet-inventorytab4:checked ~ div.sheet-inventory-page4 {
+div.sheet-inventory-page {
     display: block;
-}
-
-input.sheet-inventorytab99:checked ~ div[class^="sheet-inventory-page"] {
-    display: block;
-}
-
-input.sheet-inventorytab1:checked ~ span.sheet-inventorytab1,
-input.sheet-inventorytab2:checked ~ span.sheet-inventorytab2,
-input.sheet-inventorytab3:checked ~ span.sheet-inventorytab3,
-input.sheet-inventorytab4:checked ~ span.sheet-inventorytab4,
-input.sheet-inventorytab99:checked ~ span.sheet-inventorytab99 {
-    background: rgb(0, 158, 115);
-    color: white;
+    background: none;
+    color: #404040;
     border-radius: 4px;
-}
-
-input.sheet-inventorytab {
-    width: 155px;
-    height: 20px;
-    cursor: pointer;
-    position: relative;
-    opacity: 0;
-    z-index: 9999;
-}
-
-span.sheet-inventorytab {
-    text-align: center;
-    display: inline-block;
-    font-size: 13px;
-    background: rgb(86, 180, 233);
-    color: white;
-    font-weight: bold;
-    border-radius: 4px;
-    width: 155px;
-    height: 20px;
-    cursor: pointer;
-    position: relative;
-    margin-left: -158px;
 }
 
 
