Link each ability name to the API equivalent
I don't know about you, dear reader, but when I look at the rulebook,
I'm usually looking at abilities. If I want to know how to use an
ability with the API, I don't want to scroll up to the class name to
click a link to the API.

--- a/html/templates/ability.html
+++ b/html/templates/ability.html
@@ -1,6 +1,6 @@
 <a id="class_{clazz}_ability_{name}"><table class="visible-table bordered">
     <tr class="center bordered">
-        <td class="center bordered"><i>{name}</i></td>
+        <td class="center bordered"><i><a href="/api#class_{clazz}">{name}</a></i></td>
         <td class="center bordered">{action}</td>
         <td class="center bordered">Cost: {cost}</td>
         <td class="center bordered">Range: {range}</td>
