Re-add Glimmering

--- a/html/templates/rulebook.html
+++ b/html/templates/rulebook.html
@@ -858,6 +858,13 @@
 				</tr>
 				<tr class="bordered">
 					<td class="center bordered">Glamourous</td>
+					<td class="center bordered">Item seems twice as valuable</td>
+					<td class="center bordered">Any</td>
+					<td class="center bordered">D</td>
+					<td class="center bordered">+40</td>
+				</tr>
+				<tr class="bordered">
+					<td class="center bordered">Glimmering</td>
 					<td class="center bordered">Item softly glows a chosen color</td>
 					<td class="center bordered">Any</td>
 					<td class="center bordered">E</td>
